src/objects/PIA_SUM__c.object
<CustomObject>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>dankai_atari__c  /  dankai_tuujyou__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>段階連率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field4__c</fullName>
        <formula>sum_atari__c  /  sum_tuujou__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>総連率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>beforce__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>前段階</label>
        <referenceTo>PIA_SUM__c</referenceTo>
        <relationshipLabel>PIA_SUM</relationshipLabel>
        <relationshipName>PIA_SUM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dankai_atari10__c</fullName>
        <formula>beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.dankai_atari__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>段階10当たり</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dankai_atari11__c</fullName>
        <formula>beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.dankai_atari__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>段階11当たり</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dankai_atari12__c</fullName>
        <formula>beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.dankai_atari__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>段階12当たり</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dankai_kaitensu__c</fullName>
        <label>段階回転数</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dankai_tuujyou__c</fullName>
        <label>段階通常</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hyoujijunn__c</fullName>
        <label>表示順</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renritucompare10__c</fullName>
        <formula>beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.renritucompare__c</formula>
        <label>連率比較10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>renritucompare11__c</fullName>
        <formula>beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.renritucompare__c</formula>
        <label>連率比較11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>renritucompare12__c</fullName>
        <formula>beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.renritucompare__c</formula>
        <label>連率比較12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sum_atari__c</fullName>
        <label>集計_当たり</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sum_kaiten__c</fullName>
        <label>集計_回転数</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sum_tuujou__c</fullName>
        <label>集計_通常</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PIA_SUM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>dankai_atari__c</columns>
        <columns>dankai_kaitensu__c</columns>
        <columns>dankai_tuujyou__c</columns>
        <columns>renritucompare2__c</columns>
        <columns>renritucompare3__c</columns>
        <columns>renritucompare4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>hyoujijunn__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>renritucompare__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>renritucompare2__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>renritucompare3__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>hyoujijunn__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>renritucompare4__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>台番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>